--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "nodemon": "^3.0.3",
         "vite": "^4.1.4",
         "vite-plugin-node": "^3.0.2"
     }
