feat: create api crud cart ref: #23

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.2",
         "mongoose-paginate-v2": "^1.7.1",
+        "nodemailer": "^6.9.8",
         "yup": "^1.0.2"
     },
     "devDependencies": {
