--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bcryptjs": "^2.4.3",
         "concurrently": "^8.2.2",
         "cors": "^2.8.5",
+        "dateformat": "^5.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "joi": "^17.8.3",
@@ -31,10 +32,16 @@
         "mongoose": "^7.0.2",
         "mongoose-paginate-v2": "^1.7.1",
         "nodemailer": "^6.9.8",
+        "qs": "^6.12.0",
         "yup": "^1.0.2"
     },
     "devDependencies": {
+        "@types/config": "^3.3.3",
+        "@types/cors": "^2.8.17",
+        "@types/dateformat": "^5.0.2",
         "@types/express": "^4.17.21",
+        "@types/node": "^20.11.26",
+        "@types/qs": "^6.9.12",
         "nodemon": "^3.0.3",
         "vite": "^4.1.4",
         "vite-plugin-node": "^3.0.2"
