--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "dateformat": "^5.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "firebase": "^10.9.0",
         "joi": "^17.8.3",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.2",
