--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "firebase": "^10.9.0",
+        "firebase-admin": "^12.0.0",
         "joi": "^17.8.3",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.30.1",
         "mongoose": "^7.0.2",
         "mongoose-paginate-v2": "^1.7.1",
         "nodemailer": "^6.9.8",
         "qs": "^6.12.0",
+        "twilio": "^5.0.1",
         "yup": "^1.0.2"
     },
     "devDependencies": {
